--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MW.Production - Tools untuk Produktivitas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,6 +77,6 @@
 </head>
   <body class="bg-brand-dark">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
