feat: Add Babel standalone for JSX transpilation
Includes Babel standalone script to enable JSX transpilation directly in the browser, simplifying development by removing the need for a build step.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -49,34 +48,37 @@
         }
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
-  }
-}
-</script>
-<style>
-  html {
-    scroll-behavior: smooth;
-  }
-  .gradient-text {
-    background: linear-gradient(90deg, #22D3EE, #A78BFA);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
-  }
-  .gradient-bg {
-    background-size: 200% 200%;
-    background-image: linear-gradient(45deg, #22D3EE, #3b0764, #A78BFA);
-  }
-</style>
-</head>
+    <!-- 1. Muat Babel untuk menerjemahkan TSX/JSX di browser -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react/": "https://aistudiocdn.com/react@^19.2.0/",
+        "react": "https://aistudiocdn.com/react@^19.2.0",
+        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+      }
+    }
+    </script>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+      .gradient-text {
+        background: linear-gradient(90deg, #22D3EE, #A78BFA);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-fill-color: transparent;
+      }
+      .gradient-bg {
+        background-size: 200% 200%;
+        background-image: linear-gradient(45deg, #22D3EE, #3b0764, #A78BFA);
+      }
+    </style>
+  </head>
   <body class="bg-brand-dark">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- 2. Ubah tipe skrip menjadi "text/babel" agar dapat diproses oleh Babel -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
